--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,14 @@
   </head>
   <body>
     <header class="divider">
+      
     </header>
     <main class="divider">
-      <section>
-        <input type="text" placeholder="Search Recipe">
-        <button class="search-btn">Search</button>
+      <section id="search-section">
+        <div>
+          <input type="text" placeholder="Search Recipe">
+          <button class="search-btn">Search</button>
+        </div>
       </section>
       
       <section class="recipes">
@@ -22,6 +25,6 @@
         </ul>
       </section>
     </main>
-    <footer>&copy;NOT a real business</footer>
+    <footer></footer>
   </body>
 </html>
