--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     </header>
     <main class="divider">
       <section id="search-section">
-        <div>
+        <div id="search-container">
           <input type="text" placeholder="Search Recipe">
           <button class="search-btn">Search</button>
         </div>
