added dynamic view of search options

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,22 @@
     </header>
     <main class="divider">
       <section id="search-section">
-        <div id="search-container">
-          <input type="text" placeholder="Search Recipe">
-          <button class="search-btn">Search</button>
+        <div>
+          <h1>Search Recipe</h1>
+          <p>Select how would  you like to find a recipe:</p>
+          <div class="search-selector">
+              <div id="byName">
+                <h3>By name</h3>
+                <span><img class="icon" src="images/food_3367372.png" alt="https://www.freepik.com/icon/food_3367372#fromView=search&page=3&position=93&uuid=f4bf9204-b19d-4d60-b50b-651646ad01f9 Icon by Freepik"></span>
+              </div>
+              <div id="byIngredients">
+                <h3>By Ingredients list</h3>
+                <span><img class="icon" src="images/plan_2224194.png" alt="https://www.freepik.com/icon/plan_2224194 Icon by Freepik"></span>
+              </div>
+            </div>
+            <div id="search-container">
+              
+            </div>
         </div>
       </section>
       
