--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,27 @@
               </div>
             </div>
             <div id="search-container">
+              <form>
+                <fieldset>
+                  <label for="name">Recipe name</label>
+                  <input id="name" type="text" required>
+                </fieldset>
+                <fieldset>
+                  <h3>Detailed Search</h3>
+                  <label>Diet</label>
+                  <input>
+                  <label>Intolerances</label>
+                  <input>
+                  <label>cuisine</label>
+                  <input>
+                  <label>Include Ingredientes</label>
+                  <input>
+                  <label>Exclude Ingredientes</label>
+                  <input>
+                  <label>Exclude cuisine</label>
+                  <input>
+                </fieldset>
+              </form>
               
             </div>
         </div>
